<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.wilsonngja.rotitalk.viewmodel.MainPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_page">
        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025"
            app:srcCompat="@mipmap/app_logo_foreground" />

        <TextView
            android:id="@+id/txtViewAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chewy_regular"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#2D619E"
            android:textSize="86sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:gravity="center"
            android:shadowColor="#202020"
            android:shadowDx="6"
            android:shadowDy="6"
            android:shadowRadius="4"/>

        <TextView
            android:id="@+id/txtViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chewy_regular"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#2D619E"
            android:textSize="64sp"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/txtViewHelperText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.939" />

        <TextView
            android:id="@+id/txtViewHelperText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chewy_regular"
            android:text="@string/helper_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#609FE9"
            android:textSize="24sp"
            android:typeface="normal"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.66" />

        <Button
            android:id="@+id/btnHostARoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="32dp"
            android:text="@string/host_room"
            android:background="@drawable/button_blue_background"
            android:textColor="@color/secondary_blue"
            android:fontFamily="@font/chewy_regular"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btnJoinARoom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewHelperText"

            app:layout_constraintVertical_bias="0.632" />

        <Button
            android:id="@+id/btnJoinARoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:paddingHorizontal="32dp"
            android:text="@string/join_room"
            android:background="@drawable/button_green_background"
            android:fontFamily="@font/chewy_regular"
            android:textSize="18sp"
            android:textColor="@color/secondary_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
